Lesson03 Lab Update

--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,56 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Workbook</title>
 </head>
+
 <body>
-<h1>Table of Contents:</h1>
-<h2>Lesson02</h2>
-<h3>Assignments:</h3>
-<ul>
-    <li><a href="Lab-Files/Lesson02/Assignments/resume.html">Lesson02 - Assignments - resume.html</a></li>
-</ul>
-<h3>Challenges:</h3>
-<ul>
-    <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html"> Lesson02 - Challenges - blog-post.html</a></li>
-    <li><a href="Lab-Files/Lesson02/Challenges/text-level-element.html">Lesson02 - Challenges - text-level-element.html</a></li>
-    <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a></li>
-    <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a></li>
-</ul>
-<h3>Labs:</h3>
-<ul>
-    <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson02 - Labs - syb.html</a></li>
-</ul>
+    <h1>Table of Contents:</h1>
+    <h2>Lesson02</h2>
+    <h3>Assignments:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson02/Assignments/resume.html">Lesson02 - Assignments - resume.html</a></li>
+    </ul>
+    <h3>Challenges:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html"> Lesson02 - Challenges - blog-post.html</a></li>
+        <li><a href="Lab-Files/Lesson02/Challenges/text-level-element.html">Lesson02 - Challenges - text-level-element.html</a></li>
+        <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a></li>
+        <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a></li>
+    </ul>
+    <h3>Labs:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson02 - Labs - syb.html</a></li>
+    </ul>
 
-<h2>Lesson03</h2>
-<h3>Assignments:</h3>
+    <h2>Lesson03</h2>
+    <h3>Assignments:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson03/Assignments/blog-page.html">Lesson03 - Assignments - blog-page.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Assignments/blog-page.css">Lesson03 -Assignments - blog-page.css</a></li>
+    </ul>
 
-<h3>Challenges:</h3>
-<ul>
-    <li> <a href="Lab-Files/Lesson03/Challenges/wild-animal.html"> Lesson03 - Challenges - wild-animal.html</a></li>
-    <li> <a href="Lab-Files/Lesson03/Challenges/apples-bananas.html"> Lesson03 - Challenges - apples-bananas.html</a></li>
-    <li> <a href="Lab-Files/Lesson03/Challenges/box-positioning.html"> Lesson03 - Challenges - box-positioning.html</a></li>
-    <li> <a href="Lab-Files/Lesson03/Challenges/box-positioning.css"> Lesson03 - Challenges - box-positioning.css</a></li>
-</ul>
+    <h3>Challenges:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson03/Challenges/wild-animal.html"> Lesson03 - Challenges - wild-animal.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Challenges/apples-bananas.html"> Lesson03 - Challenges - apples-bananas.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.html"> Lesson03 - Challenges - box-positioning.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.css"> Lesson03 - Challenges - box-positioning.css</a></li>
+    </ul>
 
+    <h3>Labs:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson03 - Labs - syb.html</a></li>
+    </ul>
+    <h2>Lesson04</h2>
+    <h3>Challenges:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson04/Challenges/box-model.html"> Lesson04 - Challenges - box-model.html</a></li>
+        <li><a href="Lab-Files/Lesson04/Challenges/flexbox-flags.html"> Lesson04 -Challenges - flexbox-flags.html</a></li>
+    </ul>
 
 </body>
+
 </html>
