Completed flexbox-flags challenge and added back buttons

--- a/public/Lab-Files/Lesson04/Challenges/box-model.html
+++ b/public/Lab-Files/Lesson04/Challenges/box-model.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="box-model.css" />
 </head>
 <body>
+    
+    <a href="../../../index.html">&lt;&lt; Back</a>
+    
     <div class="box box1">Box 1</div>
     <div class="box box2">Box 2</div>
     <div class="box box3">Box 3</div>
