--- a/public/Lab-files/Lesson02/Challenges/blog-post.html
+++ b/public/Lab-files/Lesson02/Challenges/blog-post.html
@@ -5,9 +5,11 @@
     <title>Blog</title>
 </head>
 <body>
+     <a href="/">Back</a>
     <h1>Meditation</h1>
     
     </body>
+   
     <p>
     <h2> Type</h2>
     Vipassana meditation is a great addition to one's routine
