--- a/public/Lab-files/Lesson02/Challenges/text-level-elements.html
+++ b/public/Lab-files/Lesson02/Challenges/text-level-elements.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <a href="/">Back</a>
     <p>
     <em>Web</em> development is a broad term for the work involved in developing a web site for the <strong>Internet</strong> (World Wide Web) or an intranet (a private network). Web development can range from developing the simplest static single page of plain text to the most complex
     web-based internet applications, <em>electronic businesses</em>, and social network services. A more comprehensive list of tasks to which web development commonly refers, may include web engineering, web design, web content development, client liaison, client-side/server-side
