--- a/public/Lab-Files/Lesson05/Challenges/Team_Day2/public/index.html
+++ b/public/Lab-Files/Lesson05/Challenges/Team_Day2/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Team - Home</title>
+    <title>Manny Cerna - Green Team - Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
     <link rel=" stylesheet" href="css/styles.css" type="text/css"/>
 
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>Header</header>
+    <header>Responsive Web Design starting from Mobile Screen up to PC Screen</header>
     <main>
         <nav>Navigation</nav>
         <div class="story-container">
