Add back buttons to Team Challenges and added viewort meta tag to table challenge

--- a/public/Lab-Files/Lesson05/Challenges/Team-Challenge-1/index.html
+++ b/public/Lab-Files/Lesson05/Challenges/Team-Challenge-1/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Red Team - Home</title>
-    
+    <title>Red Team - Home</title> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <a href="../../../../index.html">&lt;&lt; Back</a>
     
 <div class="table-responsive"> 
    <table>
