--- a/public/Lab-Files/Lesson05/Challenges/Team-Challenge-2/index.html
+++ b/public/Lab-Files/Lesson05/Challenges/Team-Challenge-2/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    
+   <a href="../../../../index.html">&lt;&lt; Back</a>
+
+    
    <header>
        <h1>Header</h1>
    </header>
