index.html Update

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     </ul>
     <h3>Challenges:</h3>
     <ul>
-        <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html"> Lesson02 - Challenges - blog-post.html</a></li>
+        <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenges - blog-post.html</a></li>
         <li><a href="Lab-Files/Lesson02/Challenges/text-level-element.html">Lesson02 - Challenges - text-level-element.html</a></li>
         <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a></li>
         <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a></li>
@@ -29,15 +29,15 @@
     <h3>Assignments:</h3>
     <ul>
         <li><a href="Lab-Files/Lesson03/Assignments/blog-page.html">Lesson03 - Assignments - blog-page.html</a></li>
-        <li><a href="Lab-Files/Lesson03/Assignments/blog-page.css">Lesson03 -Assignments - blog-page.css</a></li>
+        <li><a href="Lab-Files/Lesson03/Assignments/blog-page.css">Lesson03 - Assignments - blog-page.css</a></li>
     </ul>
 
     <h3>Challenges:</h3>
     <ul>
-        <li><a href="Lab-Files/Lesson03/Challenges/wild-animal.html"> Lesson03 - Challenges - wild-animal.html</a></li>
-        <li><a href="Lab-Files/Lesson03/Challenges/apples-bananas.html"> Lesson03 - Challenges - apples-bananas.html</a></li>
-        <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.html"> Lesson03 - Challenges - box-positioning.html</a></li>
-        <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.css"> Lesson03 - Challenges - box-positioning.css</a></li>
+        <li><a href="Lab-Files/Lesson03/Challenges/wild-animal.html">Lesson03 - Challenges - wild-animal.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Challenges/apples-bananas.html">Lesson03 - Challenges - apples-bananas.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.html">Lesson03 - Challenges - box-positioning.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.css">Lesson03 - Challenges - box-positioning.css</a></li>
     </ul>
 
     <h3>Labs:</h3>
@@ -45,18 +45,50 @@
         <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson03 - Labs - syb.html</a></li>
     </ul>
     <h2>Lesson04</h2>
-    <h3>Challenges:</h3>
+    <h3>Assignments/Challenges:</h3>
     <ul>
-        <li><a href="Lab-Files/Lesson04/Challenges/box-model.html"> Lesson04 - Challenges - box-model.html</a></li>
-        <li><a href="Lab-Files/Lesson04/Challenges/flexbox-flags.html"> Lesson04 -Challenges - flexbox-flags.html</a></li>
+        <li><a href="Lab-Files/Lesson04/Challenges/Day1TeamChallenge/index.html">Lesson04 - Challenges- Day 1 Team Challenge - index.html</a></li>
+        <li><a href="Lab-Files/Lesson04/Challenges/Day1TeamChallenge/styles.css">Lesson04 - Challenges - Day 1 Team Challenge - styles.css</a></li>
+        <li><a href="Lab-Files/Lesson04/Challenges/box-model.html">Lesson04 - Challenges - box-model.html</a></li>
+        <li><a href="Lab-Files/Lesson04/Challenges/box-model.css">Lesson04 - Challenges - box-model.css</a></li>
+        <li><a href="Lab-Files/Lesson04/Challenges/Day2TeamChallenge/index.html">Lesson04 - Challenges - Day 2 Team Challenge - index.html</a></li>
+        <li><a href="Lab-Files/Lesson04/Challenges/Day2TeamChallenge/styles.css">Lesson04 - Challenges - Day 2 Team Challenge - styles.css</a></li>
+        <li><a href="Lab-Files/Lesson04/Challenges/flexbox-flags.html">Lesson04 - Challenges - flexbox-flags.html</a></li>
+        <li><a href="Lab-Files/Lesson04/Challenges/flexbox-flags.css">Lesson04 - Challenges - flexbox-flags.css</a></li>
     </ul>
 
     <h3>Labs:</h3>
     <ul>
-        <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson04 -Labs - syb.html</a></li>
+        <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson04 - Labs - syb.html</a></li>
     </ul>
 
+    <h3>Lesson05</h3>
+    <h3>Assignments/Challenges:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson05/Challenges/Day1TeamChallenge/index.html">Lesson05 - Challenges - Day 1 Team Challenge - index.html</a></li>
+        <li><a href="Lab-Files/Lesson05/Challenges/Day1TeamChallenge/styles.css">Lesson05 - Challenges - Day 1 Team Challenge - styles.css</a></li>
+        <li><a href="Lab-Files/Lesson05/Challenges/Day2TeamChallenge/index.html">Lesson05 - Challenges - Day 2 Team Challenge - index.html</a></li>
+        <li><a href="Lab-Files/Lesson05/Challenges/Day2TeamChallenge/styles.css">Lesson05 - Challenges - Day 2 Team Challenge - styles.css</a></li>
+    </ul>
 
+    <h3>Labs:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb_day.html">Lesson05 - Lab - syb_day.html</a></li>
+    </ul>
+    
+    <h3>Lesson06</h3>
+    <h3>Assignments/Challenges:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson06/Challenges/Day1Challenge/index.html">Lesson06 - Challenges - Day 1 Team Challenge - index.html</a></li>
+        <li><a href="Lab-Files/Lesson06/Challenges/Day1Challenge/styles.css">Lesson06 - Challenges - Day 1 Team Challenge - styles.css</a></li>
+    </ul>
+    
+        <h3>Lesson07</h3>
+    <h3>Assignments/Challenges:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson07/Challenges/Day1Challenge/index.html">Lesson07 - Challenges - Day 1 Team Challenge - index.html</a></li>
+        <li><a href="Lab-Files/Lesson07/Challenges/Day1Challenge/styles.css">Lesson07 - Challenges - Day 1 Team Challenge - styles.css</a></li>
+    </ul>
 
 </body>
 
