Updated Lesson 9 link

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
     <h2>Lesson 9:</h2>
     
     <h3>Challenges:</h3>
-        <li><a href="Lab-Files/Lesson09/Challenges/public/index.html"> Lesson 07-08 Team Project Day 1: Responsive Web Design - Professional Site </a ></li>
+        <li><a href="Lab-Files/Lesson09/Challenges/public/index.html"> Lesson 09 Team Project Day 1: Javascript Challenges </a ></li>
 
      
 </body>
