Updated pricing table

--- a/public/Lab-Files/Lesson05/Challenges/Team-Challenge-1/index.html
+++ b/public/Lab-Files/Lesson05/Challenges/Team-Challenge-1/index.html
@@ -24,9 +24,9 @@
        </tr>
        <tr>
            <td><i class="fa fa-hdd-o fa-lg"></i> Storage</td>
-           <td><i class="fa fa-hdd-o top fa-lg pink"></i><br/><br/>500 MB</td>
-           <td><i class="fa fa-hdd-o top fa-lg green"></i><br/><br/>100 GB</td>
-           <td><i class="fa fa-hdd-o top fa-lg blue"></i><br/><br/>500 GB</td>
+           <td class="background-blue"><i class="fa fa-hdd-o top fa-lg pink"></i><br/><br/>500 MB</td>
+           <td class="background-blue"><i class="fa fa-hdd-o top fa-lg green"></i><br/><br/>100 GB</td>
+           <td class="background-blue"><i class="fa fa-hdd-o top fa-lg blue"></i><br/><br/>500 GB</td>
        </tr>
        <tr>
            <td><i class="fa fa-signal fa-lg"></i> Band width</td>
@@ -36,9 +36,9 @@
        </tr>
        <tr>
            <td><i class="fa fa-shield fa-lg"></i> Security</td>
-           <td><i class="fa fa-shield top pink"></i><br/><br/>100% Secure</td>
-           <td><i class="fa fa-shield top green"></i><br/><br/>100% Secure</td>
-           <td><i class="fa fa-shield top blue"></i><br/><br/>100% Secure</td>
+           <td class="background-blue"><i class="fa fa-shield top pink"></i><br/><br/>100% Secure</td>
+           <td class="background-blue"><i class="fa fa-shield top green"></i><br/><br/>100% Secure</td>
+           <td class="background-blue"><i class="fa fa-shield top blue"></i><br/><br/>100% Secure</td>
        </tr>
        
        <tr>
