Used flexbox to widen chevrons to the edge of the container.  They will now separate as the view size increases

--- a/public/Lab-Files/Lesson07-08/Challenges/public/index.html
+++ b/public/Lab-Files/Lesson07-08/Challenges/public/index.html
@@ -64,30 +64,57 @@
         </div>
 
         <div class="features-icon">
-            <img src="img/amazing_ideas.png" alt="icon">
-            <h3>Amazing Ideas</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
-            <img src="img/ultra_fast.png" alt="icon">
-            <h3>Ultra Fast</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
-            <img src="img/cloud_storage.png" alt="icon">
-            <h3>Cloud Storage</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
-            <img src="img/mobile_optimized.png" alt="icon">
-            <h3>Mobile Optimized</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
-            <img src="img/psd_layered.png" alt="icon">
-            <h3>PSD layered</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
-            <img src="img/easy_customizable.png" alt="icon">
-            <h3>Easily Customizable</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            <div>
+                <div><img src="img/amazing_ideas.png" alt="icon">
+                    <h3>Amazing Ideas</h3>
+                    <hr>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
+            <div>
+
+                <div>
+                    <img src="img/ultra_fast.png" alt="icon">
+                    <h3>Ultra Fast</h3>
+                    <hr>
+                </div>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
+            <div>
+                <div>
+                    <img src="img/cloud_storage.png" alt="icon">
+                    <h3>Cloud Storage</h3>
+                    <hr>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
+            <div>
+                <div>
+
+                    <img src="img/mobile_optimized.png" alt="icon">
+                    <h3>Mobile Optimized</h3>
+                    <hr>
+
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
+            <div>
+                <div>
+                    <img src="img/psd_layered.png" alt="icon">
+                    <h3>PSD layered</h3>
+                    <hr>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
+            <div>
+                <div>
+                    <img src="img/easy_customizable.png" alt="icon">
+                    <h3>Easily Customizable</h3>
+                    <hr>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
         </div>
     </section>
 
@@ -103,6 +130,7 @@
                 <p>
                     <span> Michael Smith </span> <br> Project Manager
                 </p>
+
                 <div class="PM-Bio">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, laborum minima recusandae aspernatur similique iste ut ipsam ducimus adipisci eveniet. Deserunt, porro, assumenda, vero sed reiciendis soluta tempore minima eos illum labore
                         facilis nihil laborum perferendis adipisci at voluptas veniam! Animi, possimus, tempore! Nesciunt, explicabo dolorum repellendus vel ipsa exercitationem?</p>
@@ -272,30 +300,52 @@
         </div>
 
         <div class="services-icon">
-            <img src="img/web_design_icon.png" alt="icon">
-            <h3>Web Design</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
-            <img src="img/developer_icon.png" alt="icon">
-            <h3>Developer</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
-            <img src="img/web_hosting_icon.png" alt="icon">
-            <h3>Web Hosting</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
-            <img src="img/grid_icon.png" alt="icon">
-            <h3>1170 Grid </h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
-            <img src="img/full_responsive_icon.png" alt="icon">
-            <h3>Fully Responsive</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
-            <img src="img/deliver_icon.png" alt="icon">
-            <h3>Deliver</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            <div>
+                <div><img src="img/web_design_icon.png" alt="icon">
+                    <h3>Web Design</h3>
+                    <hr>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
+            <div>
+                <div><img src="img/developer_icon.png" alt="icon">
+                    <h3>Developer</h3>
+                    <hr>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
+            <div>
+                <div>
+                    <img src="img/web_hosting_icon.png" alt="icon">
+                    <h3>Web Hosting</h3>
+                    <hr>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
+            <div>
+                <div>
+                    <img src="img/grid_icon.png" alt="icon">
+                    <h3>1170 Grid </h3>
+                    <hr>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
+            <div>
+                <div>
+                    <img src="img/full_responsive_icon.png" alt="icon">
+                    <h3>Fully Responsive</h3>
+                    <hr>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
+            <div>
+                <div>
+                    <img src="img/deliver_icon.png" alt="icon">
+                    <h3>Deliver</h3>
+                    <hr>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis, nemo tempore architecto hic nostrum dicta repellendus cumque excepturi magnam nesciunt aliquam iusto quas incidunt placeat error natus quos commodi?</p>
+            </div>
         </div>
     </section>
 
@@ -434,4 +484,5 @@
         </div>
     </section>
 </body>
+
 </html>
