sda workbook upload 1.12

--- a/public/Lab-Files/Lesson03/Challenges/box-positioning.html
+++ b/public/Lab-Files/Lesson03/Challenges/box-positioning.html
@@ -6,22 +6,12 @@
   <title>Document</title>
 </head>
 <body>
-  
-<div class="main">
-<div class="row1">
-
-  <div class="box1">box 1</div>
-  <div class="box2">box 2</div>
-  <div class="box3">box 3</div>
- 
-</div>
-<div class="row2">
-
- <div class="box4">box 4</div>
-  <div class="box5">box 5</div>
-  <div class="box6">box 6</div>
-
-</div>
-  </div>
-  </body>
+  <div class="box box1">Box 1</div>
+  <div class="box box2">Box 2</div>
+  <div class="box box3">Box 3</div>
+  <div class="box box4">Box 4</div>
+  <div class="box box5">Box 5</div>
+  <div class="box box6">Box 6</div>
+    <div class="box box6">Box 6</div>
+</body>
 </html>
