--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    <!--type text here-->
+    
+    <header>
+        <h1>SDA Workbook</h1>
+    </header>
 </body>
 </html>
