--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,9 @@
     <header>
         <h1>SDA Workbook</h1>
     </header>
+    
+    <main>
+        <h2>Lession 1</h2>
+    </main>
 </body>
 </html>
