--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
 <body>
     <!--type text here -->
     <header>
-        <h1>SDA Workbook</h1>
+        <h1>SDA Workbook</h1/>
     </header>
-</Body>
+    
+    <main>
+        <h2>Lesson 1</h2>
+    </main>
+</body>
 </html>
