updated page with Lesson2

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,25 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
+
 <body>
     <!--type text here-->
     <header>
         <h1>SDA Workbook</h1>
     </header>
-    
+
     <main>
-        <h2>Lession 1</h2>
+        <h2>Lession 2</h2>
     </main>
+    <ul>
+        <li><a href="Lab-Files/Lesson2/Assignment/resume.html">Lesson02 - Assignment - resume.html</a></li>
+    </ul>
+
 </body>
+
+
 </html>
