--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!--type text here-->
-    <header>
-        <h1>SDA Workbook</h1>
-    </header>
-    <main>
-        <h2>lesson 1</h2>
-    </main>
+    <!-- links for each challenge -->
+    <a href="/Lab-Files/Lesson2/Assignments/resume/_site">Resume Challenge</a>
 </body>
 </html>
