--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,19 @@
     </header>
 
     <main>
-        <h2>Lession 2</h2>
+
+        <h2>Lesson 2</h2>
+        <h3>Challenges:</h3>
+        <ul>
+            <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenge - blog-post.html</a></li>
+            <li><a href="Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenge - text-level-elements.html</a></li>
+            <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenge - lists.html</a></li>
+            <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenge - images.html</a></li>
+        </ul>
     </main>
+    <h3>Assignments</h3>
     <ul>
-        <li><a href="Lab-Files/Lesson2/Assignment/resume.html">Lesson02 - Assignment - resume.html</a></li>
+        <li><a href="Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a></li>
     </ul>
 
 </body>
