added css file and all challenges

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link type="text/css" rel="stylesheet" href="/css/main.css"/>
 </head>
+
 <body>
     <!-- links for each challenge -->
-    <a href="/Lab-Files/Lesson2/Assignments/resume/_site">Resume Challenge</a>
+    <h1>Table of Contents</h1>
+    
+    <div class="Lesson2">
+    <h2>Lesson 2</h2>
+    <h3>Assignments</h3>
+        <ul>
+            <li><a href="/Lab-Files/Lesson2/Assignments/resume/_site">Resume Assignment</a></li>
+        </ul>
+    <h3>Labs</h3>
+    <h3>Challenges</h3>
+        <ul>
+            <li><a href="/Lab-Files/Lesson2/Challenges/blog-post.html">Blog Challenge</a></li>
+            <li><a href="/Lab-Files/Lesson2/Challenges/text-level-elements.html">Text Level Elements Challenge</a></li>
+            <li><a href="/Lab-Files/Lesson2/Challenges/lists.html">Lists Challenge</a></li>
+            <li><a href="/Lab-Files/Lesson2/Challenges/images.html">Images Challenge</a></li>
+        </ul>
+    </div>
+    
+    <div class="Lesson3">
+    <h2>Lesson 3</h2>
+    <h3>Assignments</h3>
+        <ul>
+            <li></li>
+        </ul>
+    <h3>Labs</h3>
+         <ul>
+            <li></li>
+        </ul>
+    <h3>Challenges</h3>
+        <ul>
+            <li></li>
+        </ul>
+    </div>
 </body>
 </html>
