Lesson 2 almost completed Lesson 3 started

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,36 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Table of Contents</title>
+
 </head>
+
 <body>
-    
-    <header>
-        <h1>SDA Workbook</h1>
-    </header>
-    
-    <main>
-        <h2>Lesson 1</h2>
-    </main>
+    <!--Lesson 2-->
+    <h2><u>Lesson 2</u></h2>
+    <h3>~Challenges~</h3>
+    <ul>
+        <li><a href="lab-files/Lesson2/Challenges/blog.html">Blog </a></li>
+        <li><a href="lab-files/Lesson2/Challenges/text-level-elements.html">Text Level Elements</a></li>
+        <li><a href="lab-files/Lesson2/Challenges/images.html">Images</a></li>
+        <li><a href="lab-files/Lesson2/Challenges/lists.html">Lists</a></li>
+    </ul>
+    <h3>~Assignments~</h3>
+    <ul>
+        <li><a href="lab-files/Lesson2/Assignments/resume.html"> Lesson 2 - Resume </a></li>
+    </ul>
+
+    <!--Lesson 3-->
+    <h2><u>Lesson 3</u>
+    <h3>~Challenges~</h3>
+    <ul>
+        <li><a href="lab-files/Lesson3/Challenges/applesandbananas.html">Apples and Bananas</a></li>
+        <li><a href="lab-files/Lesson3/Challenges/favoritewildanimal.html">Favorite Wild Animal</a></li>
+        <li><a href="lab-files/Lesson3/Challenges/positioning.html">Positioning</a></li>
+    </ul>
 </body>
+
+
 </html>
