--- a/public/lab-files/Lesson2/Assignments/resume.html
+++ b/public/lab-files/Lesson2/Assignments/resume.html
@@ -35,6 +35,8 @@
                 <li>Interviews clients or authorized representative to gather information to determine eligibility for benefits.</li>
                 <li>Conducts reviews to determine or verify eligibility or continued eligibility and benefit level.</li>
                 <li>Processes changes to client status, overpayments, and adjusts or restores benefits.</li>
+                <li>Documents case records using automated equipment to form a record for each client.</li>
+                <li>Communicates on an intermediate level with others (internally or externally) to provide, exchange, or verify information, answer inquiries, address issues, or resolve problems or complaints</li>
             </ul>
         <br>
         <h2>Communities in Schools</h2>
@@ -50,7 +52,7 @@
             <h3>Child Abuse and Neglect Investigator IV</h3>
     </div>
 
-
+<a href="/">Back to Home</a>
 </body>
 
 </html>
