--- a/public/lab-files/Lesson2/Challenges/lists.html
+++ b/public/lab-files/Lesson2/Challenges/lists.html
@@ -1,20 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Lists</title>
 </head>
+
 <body>
+    <a href="/">Back</a>
     <h1>Thing's I want to learn:</h1>
-    <h3>
-        <ul>
-            <li>How to crochet.</li>
-            <li>How to create phone applications.</li>
-            <li>How to blow glass.</li>
-            <li></li>
-            <li></li>
-        </ul>
-    </h3>
-    
+    <ul>
+        <li>How to crochet.</li>
+        <li>How to create phone applications.</li>
+        <li>How to blow glass.</li>
+        <li>Dye yarn.</li>
+        <li>CSS really well!</li>
+    </ul>
+
 </body>
+
 </html>
