--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,44 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Workbook</title>
+  <meta charset="UTF-8">
+  <title>Workbook</title>
 </head>
+
 <body>
   <header>
-      <h1>SDA Workbook</h1>
+    <h1>Table of Contents</h1>
   </header>
-  
-  <h2>Lesson 1</h2>
 
-    
+  <h2>Lesson 2</h2>
+  <h3>Challenges</h3>
+  <ul>
+    <li><a href="Lab-Files/Lesson02/Challenges/Blog-post.html">Lesson02 - Challenge - blog-post.html</a></li>
+    <li><a href="Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenge - text-level-elements.html</a></li>
+    <li><a href="Lab-Files/Lesson02/Challenges/Lists.html">Lesson02 - Challenge - Lists.html</a></li>
+    <li><a href="Lab-Files/Lesson02/Challenges/Images.html">Lesson02 - Challenge - Images.html</a></li>
+  </ul>
+  
+  <h3>Assignments</h3>
+  <ul>
+    <li><a href="Lab-Files/Lesson02/Assignment/Resume.html">Lesson02 - Assignments - resume.html</a></li>
+  </ul>
+
+  <h3>Lab</h3>
+  <ul>
+    <li><a href="Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat - CCYP - syb.html</a></li>
+  </ul>
+  <hr>
+
+  <h2>Lesson 3</h2>
+  <ul>
+
+
+  </ul>
+
+
+
 </body>
+
 </html>
