--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link type="text/css" rel="stylesheet" href="https://campbell20.github.io/sda-workbook/css/main.css"/>
+    <link type="text/css" rel="stylesheet" href="site.github.url/css/main.css"/>
 </head>
 
 <body>
