added CSS page to index page

--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css" type="text/css" />
 </head>
 
 <body>
-    <!--type text here-->
-    <header>
-        <h1>SDA Workbook</h1>
-    </header>
+    <blockquote>
+        <!--type text here-->
+        <header>
+            <h1>SDA Workbook</h1>
+        </header>
 
-    <main>
+        <main>
 
-        <h2>Lesson 2</h2>
-        <h3>Challenges:</h3>
+            <h2>Lesson 2</h2>
+            <h3>Challenges:</h3>
+            <ul>
+                <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenge - blog-post.html</a></li>
+                <li><a href="Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenge - text-level-elements.html</a></li>
+                <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenge - lists.html</a></li>
+                <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenge - images.html</a></li>
+            </ul>
+        </main>
+        <h3>Assignments</h3>
         <ul>
-            <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenge - blog-post.html</a></li>
-            <li><a href="Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenge - text-level-elements.html</a></li>
-            <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenge - lists.html</a></li>
-            <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenge - images.html</a></li>
+            <li><a href="Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a></li>
         </ul>
-    </main>
-    <h3>Assignments</h3>
-    <ul>
-        <li><a href="Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a></li>
-    </ul>
-
+    </blockquote>
 </body>
-
-
 </html>
